# DRF_messenger

./: .gitignore  README.md  activity1.html  activity2.html  manage.py  message1.html  message2.html  pyproject.toml  techstack.md  techstack.yml
message_be/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
message_be/apps/message/: apps.py  consumers.py  middleware.py  models.py  serializers.py  urls.py  views.py
message_be/apps/message/migrations/: 0001_initial.py  0002_user_is_online.py
message_be/apps/message/models_container/: __init__.py  user.py
message_be/apps/message/serializers_container/: __init__.py  user.py
message_be/apps/message/views_container/: __init__.py  user.py
message_be/apps/message/websocket/: activity_consumer.py  base_consumer.py  chat_consumer.py
